--- a/src/Ema/GroBlogBundle/Resources/views/Blog/detail.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/Blog/detail.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends 'EmaGroBlogBundle::layout.html.twig' %}
 
 {% block title %}EmaGroBlogBundle:Blog:detail{% endblock %}
 
