--- a/src/Ema/GroBlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/Blog/index.html.twig
@@ -10,13 +10,16 @@
                 <h2 class="post-title">
                     {{ post.getTitre() }}
                 </h2>
-                <h3 class="post-subtitle">
-                    {{ post.getContent }}
-                </h3>
+                <br>
+                {{ post.getContent|raw }}
+
             </a>
-            <p class="post-meta"> <span>id: {{ post.getId() }}</span> <span>  urlAlias: {{ post.getUrlAlias() }}</span><br><br></p>
+            <p class="post-meta"> <span>id: {{ post.getId() }}</span><br> <span>  urlAlias: {{ post.getUrlAlias() }}</span><br><br></p>
         </article>
         <hr>
     {% endfor %}
     </section>
 {% endblock %}
+
+
+
