--- a/src/Ema/GroBlogBundle/Resources/views/layout.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/layout.html.twig
@@ -44,23 +44,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/web/app_dev.php">Accueil</a>
+                    <a class="navbar-brand" href="{{ path('index') }}">Actualité</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="{{ path('index') }}">Accueil</a>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="{{ path('new') }}">Nouveau post</a>
                         </li>
                         <li>
-                            <a href="post.html">Sample Post</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="admin">Administration</a>
                         </li>
                     </ul>
                 </div>
@@ -93,7 +90,7 @@
                     <!-- Pager -->
                     <ul class="pager">
                         <li class="next">
-                            <a href="#">Older Posts &rarr;</a>
+                            <a href="#">Ancien Posts &rarr;</a>
                         </li>
                     </ul>
                 </div>
