--- a/src/Ema/GroBlogBundle/Resources/views/Blog/new.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/Blog/new.html.twig
@@ -24,7 +24,7 @@
                     </li>
                 </ul>
             </fieldset>
-            <fieldset>
+            <fieldset style="padding-top: 20px;">
                 <button class="btn-default" type=submit>Créér</button>
             </fieldset>
         {{ form_start(form) }}
