--- a/src/Ema/GroBlogBundle/Resources/views/layout.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/layout.html.twig
@@ -77,7 +77,7 @@
                         <div class="site-heading">
                             <h1>Geronimo</h1>
                             <hr class="small">
-                            <span class="subheading">A blog about doctor who</span>
+                            <span class="subheading">Un blog sur doctor who</span>
                         </div>
                     </div>
                 </div>
