--- a/src/Ema/GroBlogBundle/Resources/views/Blog/admin.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/Blog/admin.html.twig
@@ -22,7 +22,7 @@
             <td style="padding-top:20px;">{{ post.getId() }}</td>
             <td style="padding-top:20px;padding-right:10px;"><a href="{{ path('post', {iddupost:post.getId()}) }}">{{ post.getTitre() }}</a></td>
             <td style="padding-top:20px;padding-right:10px;">{{ post.getUrlAlias() }}</td>
-            <td style="padding-top:20px;padding-right:10px;padding-left:10px;"><img width="35px;" src="{{ asset('bundles/emagroblog/img/edit.png') }}"/></td>
+            <td style="padding-top:20px;padding-right:10px;padding-left:10px;"><a href="{{ path('edit', {iddupost:post.getId()}) }}"><img width="35px;" src="{{ asset('bundles/emagroblog/img/edit.png') }}"/></a></td>
             <td style="padding-left:10px;padding-top:20px;"><a href="{{ path('delete', {iddupost:post.getId()}) }}"><img width="30px;" src="{{ asset('bundles/emagroblog/img/delete.png') }}"/></a></td>
          </tr>
         {% endfor %}
