--- a/src/Ema/GroBlogBundle/Resources/views/Crud/new.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/Crud/new.html.twig
@@ -3,28 +3,31 @@
 {% block title %}EmaGroBlogBundle:Blog:detail{% endblock %}
 
 {% block body %}
-    {% if status == "success" %}
-        <div class="alert alert-success">
-          <strong>Félicitation</strong> Votre topic à bien été crée.
-        </div>
-    {% else %}
-        {% if status != "" %}
-            <div class="alert alert-danger">
-                {{  status }}
+    <section id="formulaire">
+        {% if status == "success" %}
+            <div class="alert alert-success">
+              <strong>Félicitation</strong> Votre topic à bien été crée.
             </div>
+        {% else %}
+            {% if status != "" %}
+                <div class="alert alert-danger">
+                    {{  status }}
+                </div>
+            {% endif %}
+
+            {{ form_start(form) }}
+                <fieldset>
+                    <legend><h1>Ajouter un nouvel article</h1></legend>
+                    <ul>
+                        <li style="padding-bottom: 30px;">
+                            {{ form_row(form.titre) }}
+                        </li>
+                        <li>
+                            {{ form_row(form.content) }}
+                        </li>
+                    </ul>
+                </fieldset>
+            {{ form_end(form) }}
         {% endif %}
-        {{ form_start(form) }}
-            <fieldset>
-                <legend><h1>Ajouter un nouvel article</h1></legend>
-                <ul>
-                    <li style="padding-bottom: 30px;">
-                        {{ form_row(form.titre) }}
-                    </li>
-                    <li>
-                        {{ form_row(form.content) }}
-                    </li>
-                </ul>
-            </fieldset>
-        {{ form_end(form) }}
-    {% endif %}
+    </section>
 {% endblock %}
