--- a/src/Ema/GroBlogBundle/Resources/views/Crud/edit.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/Crud/edit.html.twig
@@ -16,7 +16,7 @@
 
         {{ form_start(form) }}
             <fieldset>
-                <legend><h1>Modifier un article</h1></legend>
+                <h2>Modifier un article</h2>
                 <ul>
                     <li style="padding-bottom: 30px;">
                         {{ form_row(form.titre) }}
