--- a/src/Ema/GroBlogBundle/Resources/views/layout.html.twig
+++ b/src/Ema/GroBlogBundle/Resources/views/layout.html.twig
@@ -86,13 +86,13 @@
         </header>
 
         <!-- Main Content -->
-        <section class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     {% block body %}{% endblock %}
                 </div>
             </div>
-        </section>
+        </div>
 
         <hr>
 
